ab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ab-test-active
  namespace: default
spec:
  selector:
    app: ab-test
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ab-test-preview
  namespace: default
spec:
  selector:
    app: ab-test
  ports:
    - port: 80
      targetPort: 80
